--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -231,6 +231,7 @@ edc-keypair-spi = { module = "org.eclipse.edc:keypair-spi", version.ref = "edc" 
 
 edc-identity-trust-spi = { module = "org.eclipse.edc:identity-trust-spi", version.ref = "edc" }
 edc-identity-trust-core = { module = "org.eclipse.edc:identity-trust-core", version.ref = "edc" }
+edc-identity-trust-service = { module = "org.eclipse.edc:identity-trust-service", version.ref = "edc" }
 edc-identity-trust-issuers-configuration = { module = "org.eclipse.edc:identity-trust-issuers-configuration", version.ref = "edc" }
 edc-identity-trust-transform = { module = "org.eclipse.edc:identity-trust-transform", version.ref = "edc" }
 edc-jersey-providers-lib = { module = "org.eclipse.edc:jersey-providers-lib", version.ref = "edc" }
@@ -239,7 +240,9 @@ edc-jsonLd-lib = { module = "org.eclipse.edc:json-ld-lib", version.ref = "edc" }
 edc-jsonLd-spi = { module = "org.eclipse.edc:json-ld-spi", version.ref = "edc" }
 edc-jws2020-lib = { module = "org.eclipse.edc:jws2020-lib", version.ref = "edc" }
 edc-jwt-spi = { module = "org.eclipse.edc:jwt-spi", version.ref = "edc" }
+edc-verifiable-credentials = { module = "org.eclipse.edc:verifiable-credentials", version.ref = "edc" }
 edc-ldp-verifiable-credentials = { module = "org.eclipse.edc:ldp-verifiable-credentials", version.ref = "edc" }
+edc-jwt-verifiable-credentials = { module = "org.eclipse.edc:jwt-verifiable-credentials", version.ref = "edc" }
 edc-management-api = { module = "org.eclipse.edc:management-api", version.ref = "edc" }
 edc-management-api-configuration = { module = "org.eclipse.edc:management-api-configuration", version.ref = "edc" }
 edc-policy-definition-api = { module = "org.eclipse.edc:policy-definition-api", version.ref = "edc" }
