feat: acme support
Added switch to proxy-ui-api for acme challenge port 80; updated configuration to allow proxy-ui-api to use port 80

refs: XRDDEV-2534, XRDDEV-2535

--- a/src/packages/src/xroad/default-configuration/override-securityserver-fi.ini
+++ b/src/packages/src/xroad/default-configuration/override-securityserver-fi.ini
@@ -21,6 +21,9 @@ client-use-idle-connection-monitor=true
 client-timeout=30000
 server-min-supported-client-version=7.3.0
 
+[proxy-ui-api]
+acme-challenge-port-enabled=true
+
 [message-log]
 message-body-logging=false
 acceptable-timestamp-failure-period=172800
