--- a/src/packages/src/xroad/redhat/SOURCES/proxy-ui-api/xroad-proxy-ui-api.service
+++ b/src/packages/src/xroad/redhat/SOURCES/proxy-ui-api/xroad-proxy-ui-api.service
@@ -7,6 +7,7 @@ StartLimitBurst=5
 StartLimitIntervalSec=40
 
 [Service]
+AmbientCapabilities=CAP_NET_BIND_SERVICE
 User=xroad
 Group=xroad
 ExecStart=/usr/share/xroad/bin/xroad-proxy-ui-api
