fix: ensure that auth cert hashes are not hashed again
Security server authentication cert hashes were hashed again when
global configuration was rewritten to disk. Bug appeared in
configuration proxy federated setup.

Refs: XRDDEV-2534

--- a/src/common/common-globalconf/build.gradle
+++ b/src/common/common-globalconf/build.gradle
@@ -14,5 +14,6 @@ dependencies {
     api project(':common:common-jetty')
 
     testImplementation project(':common:common-test')
+    testImplementation(libs.junit.jupiter.params)
 }
 
