feat: As a Developer I want to improve the ACME configuration to prevent potential uniqueness issues in the future
refs: XRDDEV-2647

--- a/Docker/securityserver/files/etc/xroad/conf.d/acme.yml
+++ b/Docker/securityserver/files/etc/xroad/conf.d/acme.yml
@@ -1,11 +1,11 @@
 acme:
   contacts:
-    1234: member1@example.org
+    '[DEV:COM:1234]': member1@example.org
   eab-credentials:
     certificate-authorities:
       '[Test CA]':
         mac-key-base64-encoded: true
         members:
-          1234:
+          '[DEV:COM:1234]':
             kid: 1
             mac-key: secretkey
