feat: Use DIDs from Identity Hub

--- a/Docker/xrd-dev-stack/compose.edc.yaml
+++ b/Docker/xrd-dev-stack/compose.edc.yaml
@@ -21,7 +21,7 @@ services:
   ss0:
     environment:
       - EDC_HOSTNAME=ss0
-      - EDC_DID=did:web:xroad-8-ss0.s3.eu-west-1.amazonaws.com
+      - EDC_DID=did:web:ss0%3A9396
       - EDC_DID_KEY_ID=JWK2020-RSA
     ports:
       - "4293:9953" #EDC connector debug
@@ -35,7 +35,7 @@ services:
   ss1:
     environment:
       - EDC_HOSTNAME=ss1
-      - EDC_DID=did:web:xroad-8-ss1.s3.eu-west-1.amazonaws.com
+      - EDC_DID=did:web:ss1%3A9396
       - EDC_DID_KEY_ID=JWK2020-RSA
     ports:
       - "4393:9953" #EDC connector debug
