--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -83,6 +83,7 @@ include 'security-server:edc:extensions:xroad-policy'
 include 'security-server:edc:extensions:xroad-identity-and-trust'
 include 'security-server:edc:extensions:xroad-webserver'
 include 'security-server:edc:extensions:xroad-jsonld'
+include 'security-server:edc:extensions:xroad-ldp-verifiable-credentials'
 include 'security-server:edc-client'
 include 'security-server:edc:xroad-edc-security'
 include 'security-server:edc:runtime:connector'
