--- a/src/security-server/edc/extensions/xroad-ldp-verifiable-credentials/build.gradle
+++ b/src/security-server/edc/extensions/xroad-ldp-verifiable-credentials/build.gradle
@@ -4,13 +4,13 @@ plugins {
 
 dependencies {
     implementation libs.edc.boot
-    api libs.edc.jsonLd
+    implementation libs.edc.jsonLd
 
     implementation libs.edc.jws2020.lib
     implementation libs.edc.token.core
     implementation libs.edc.crypto.common.lib
     implementation libs.edc.util.lib
-    api libs.apache.commonsLang3
+    implementation libs.apache.commonsLang3
 }
 
 checkstyle {
