--- a/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
@@ -14,13 +14,11 @@ web.http.resolution.port=20002
 edc.http.client.https.enforce=true
 
 ### IAM ###
-edc.iam.issuer.id=did:web:localhost
-edc.iam.sts.privatekey.alias=alias_localhost
-edc.iam.did.web.use.https=true
-
-# Identity Hub
 edc.ih.iam.id=did:web:localhost
 edc.ih.iam.publickey.alias=did:web:localhost
+
+# Required by IdentityHubCredentialInsertionExtension for private key retrieval
+edc.iam.sts.privatekey.alias=did:web:localhost-private-key
 
 edc.vault.hashicorp.url=http://127.0.0.1:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
