--- a/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
+++ b/src/security-server/edc/extensions/xroad-identity-and-trust/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation libs.edc.jws2020.lib
     implementation libs.edc.token.core
     implementation libs.edc.util.lib
-    api libs.apache.commonsLang3
+    implementation libs.apache.commonsLang3
 }
 
 checkstyle {
