fix: Add workaround for openapi-generator bug (#2196)
* fix: add workaround for openapi-generator bug

Refs: XRDDEV-2649

* fix: remove logging

Refs: XRDDEV-2649

* fix: refacto

Refs: XRDDEV-2649

--- a/src/central-server/openapi-model/build.gradle
+++ b/src/central-server/openapi-model/build.gradle
@@ -27,6 +27,7 @@ openApiGenerate {
     apiPackage = "org.niis.xroad.cs.openapi"
     modelPackage = "org.niis.xroad.cs.openapi.model"
     modelNameSuffix = "Dto"
+    templateDir = "$projectDir/src/main/resources/template"
     importMappings.set([
         User           : "org.niis.xroad.restapi.openapi.model.User",
         ErrorInfo      : "org.niis.xroad.restapi.openapi.model.ErrorInfo",
