--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -148,6 +148,7 @@ semver4j = { module = "org.semver4j:semver4j", version = "5.3.0" }
 restAssured = { module = "io.rest-assured:rest-assured", version = "5.4.0" }
 cliche = { module = "com.googlecode.clichemaven:cliche", version = "110413" }
 acme4j = { module = "org.shredzone.acme4j:acme4j-client", version = "3.3.1" }
+jsonUnit-assertj = { module = "net.javacrumbs.json-unit:json-unit-assertj", version = "3.2.7" }
 
 [bundles]
 metrics = ["metrics-core", "metrics-jmx"]
