--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -15,7 +15,7 @@ web.http.control.path=/control
 
 edc.dsp.callback.address=https://localhost:9194/protocol
 edc.transfer.proxy.token.signer.privatekey.alias=did:web:localhost-private-key
-edc.transfer.proxy.token.verifier.publickey.alias=did:web:localhost
+edc.transfer.proxy.token.verifier.publickey.alias=did:web:localhost#key-id
 
 edc.edr.receiver.sync=true
 edc.dataplane.token.validation.endpoint=https://localhost:9192/control/token
