--- a/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
@@ -2,8 +2,8 @@ edc.participant.id=did:web:localhost
 
 web.http.port=9391
 web.http.path=/api
-web.http.management.port=9393
-web.http.management.path=/management
+web.http.identity.port=9393
+web.http.identity.path=/identity
 web.http.protocol.port=9395
 web.http.protocol.path=/protocol
 web.http.did.path=/
@@ -12,10 +12,6 @@ web.http.resolution.path=/resolution
 web.http.resolution.port=20001
 
 edc.http.client.https.enforce=true
-
-### IAM ###
-edc.ih.iam.id=did:web:localhost
-edc.ih.iam.publickey.alias=did:web:localhost
 
 # Required by IdentityHubCredentialInsertionExtension for private key retrieval
 edc.iam.sts.privatekey.alias=did:web:localhost-private-key
