--- a/src/security-server/edc-client/build.gradle
+++ b/src/security-server/edc-client/build.gradle
@@ -22,11 +22,13 @@ dependencies {
     api libs.edc.policy.definition.api
     api libs.edc.contract.definition.api
     api libs.edc.data.plane.selector.api
+    api libs.edc.data.plane.selector.control.api
     api libs.edc.transfer.process.api
 
     api libs.edc.data.plane.http.spi
 
     api libs.edc.jsonLd.spi
+    api libs.edc.jsonLd.lib
     api libs.edc.transform.lib
     api libs.edc.connector.core
     api libs.edc.control.plane.transform
