--- a/src/security-server/edc/runtime/connector/build.gradle
+++ b/src/security-server/edc/runtime/connector/build.gradle
@@ -28,15 +28,17 @@ dependencies {
     implementation libs.edc.transfer.data.plane.signaling
 
     implementation libs.edc.data.plane.selector.api
+    implementation libs.edc.data.plane.selector.control.api
     implementation libs.edc.data.plane.selector.core
 
     implementation libs.edc.data.plane.control.api
     implementation libs.edc.data.plane.core
     implementation libs.edc.data.plane.http
 
-    implementation libs.edc.identity.trust.core
     implementation libs.edc.identity.did.core
     implementation libs.edc.identity.did.web
+
+    implementation libs.edc.jsonLd.lib
 
     // sql store
     implementation libs.bundles.edc.sql.store
