feat: DSS signatures and ASiC-E container generation & verification POC.

--- a/Docker/xrd-dev-stack/compose.edc.yaml
+++ b/Docker/xrd-dev-stack/compose.edc.yaml
@@ -62,6 +62,8 @@ services:
   jaeger:
     image: jaegertracing/all-in-one:1.57
     container_name: jaeger
+    environment:
+      - MEMORY_MAX_TRACES=1000
     deploy:
       resources:
         reservations:
