--- a/src/asicverifier/build.gradle
+++ b/src/asicverifier/build.gradle
@@ -7,6 +7,9 @@ dependencies {
         project(':asic-util')
 
     implementation(project(':common:common-core'))
+    implementation libs.dss.asic.xades
+    implementation libs.dss.evidence.record.xml
+    implementation libs.dss.utils.apache.commons
 
     testImplementation project(':common:common-test')
 }
