feat: Register dataplane through control API instead of management API

--- a/Docker/centralserver/files/edc/etc/edc-connector.properties
+++ b/Docker/centralserver/files/edc/etc/edc-connector.properties
@@ -2,8 +2,8 @@ edc.participant.id=did:web:localhost
 
 web.http.port=9191
 web.http.path=/api
-web.http.management.port=9193
-web.http.management.path=/management
+web.http.identity.port=9193
+web.http.identity.path=/identity
 web.http.protocol.port=9194
 web.http.protocol.path=/protocol
 edc.public.key.alias=public-key
