--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -246,6 +246,7 @@ edc-ldp-verifiable-credentials = { module = "org.eclipse.edc:ldp-verifiable-cred
 edc-jwt-verifiable-credentials = { module = "org.eclipse.edc:jwt-verifiable-credentials", version.ref = "edc" }
 edc-management-api = { module = "org.eclipse.edc:management-api", version.ref = "edc" }
 edc-management-api-configuration = { module = "org.eclipse.edc:management-api-configuration", version.ref = "edc" }
+edc-control-api-configuration = { module = "org.eclipse.edc:control-api-configuration", version.ref = "edc" }
 edc-policy-definition-api = { module = "org.eclipse.edc:policy-definition-api", version.ref = "edc" }
 edc-policy-engine-spi = { module = "org.eclipse.edc:policy-engine-spi", version.ref = "edc" }
 edc-transfer-data-plane-signaling = { module = "org.eclipse.edc:transfer-data-plane-signaling", version.ref = "edc" }
