chore: setting to enable mTLS

--- a/Docker/securityserver/files/edc/etc/edc-connector.properties
+++ b/Docker/securityserver/files/edc/etc/edc-connector.properties
@@ -10,6 +10,7 @@ web.http.public.port=9291
 web.http.public.path=/public
 web.http.xroad.public.port=9293
 web.http.xroad.public.path=/xroad/public
+web.http.xroad.public.needClientAuth=true
 web.http.control.port=9192
 web.http.control.path=/control
 
