fix: acme config had missing property substitutions that help convert acme.yml properties to java AcmeProperties
fix RHEL 7 yum repo build error

refs: XRDDEV-2647

(cherry picked from commit b371e9a7ffc4c345495813562eb9fb07528de252)

--- a/src/packages/docker/rpm/Dockerfile
+++ b/src/packages/docker/rpm/Dockerfile
@@ -1,4 +1,7 @@
 FROM centos:7
+RUN sed -i s/mirror.centos.org/vault.centos.org/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^#.*baseurl=http/baseurl=http/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^mirrorlist=http/#mirrorlist=http/g /etc/yum.repos.d/*.repo
 RUN yum -y install sudo git rpm-build java-1.8.0-openjdk-headless
 RUN yum clean all
 RUN sed -i 's/requiretty/!requiretty/' /etc/sudoers
