fix: Revert port changes to signer integration test
Refs: XRDDEV-2665

--- a/src/common/common-int-test/src/main/resources/signer-container-files/Dockerfile
+++ b/src/common/common-int-test/src/main/resources/signer-container-files/Dockerfile
@@ -26,4 +26,4 @@ COPY --chown=root:root files/hwtoken.jar /root/lib/hwtoken.jar
 COPY --chown=root:root etc /etc
 COPY --chown=root:root var /var
 
-EXPOSE 5559 5560
+EXPOSE 5558 5559 5560
