--- a/Docker/xrd-dev-stack/.env
+++ b/Docker/xrd-dev-stack/.env
@@ -1,4 +1,5 @@
 CS_IMG=ghcr.io/nordic-institute/xrddev-central-server:latest
 SS_IMG=ghcr.io/nordic-institute/xrddev-security-server:latest
+SS_XRD7_IMG=ghcr.io/nordic-institute/xrddev-security-server:latest
 CA_IMG=ghcr.io/nordic-institute/xrddev-testca:latest
 IS_SOAP_IMG=niis/example-adapter:latest
