--- a/Docker/xrd-dev-stack/.env.local
+++ b/Docker/xrd-dev-stack/.env.local
@@ -1,4 +1,5 @@
 CS_IMG=xrd-centralserver-dev
 SS_IMG=xrd-securityserver-dev
+SS_XRD7_IMG=xrd-securityserver7-dev
 CA_IMG=xrd-testca
 IS_SOAP_IMG=niis/example-adapter:latest
