chore: profile for local perftest env

--- a/Docker/xrd-dev-stack/hurl-src/vars.env
+++ b/Docker/xrd-dev-stack/hurl-src/vars.env
@@ -7,3 +7,6 @@ example_service_address=http://issoap:8080/example-adapter/Endpoint
 
 is_rest_url=http://isrest:8080/integration/mock_1
 is_rest_service_code=mock1
+
+is_rest_payloadgen_url=http://payloadgen:8080
+is_rest_payloadgen_service_code=payloadgen
