--- a/Docker/securityserver/files/etc/xroad/services/local.conf
+++ b/Docker/securityserver/files/etc/xroad/services/local.conf
@@ -1,3 +1,6 @@
-PROXY_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9999,server=y,suspend=n $PROXY_PARAMS"
-XROAD_SIGNER_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9998,server=y,suspend=n $XROAD_SIGNER_PARAMS"
+PROXY_JMX_PARAMS="-Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=$PROXY_JMX_PORT -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=$PROXY_JMX_PORT -Djava.rmi.server.hostname=localhost"
+SIGNER_JMX_PARAMS="-Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=$SIGNER_JMX_PORT -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.rmi.port=$SIGNER_JMX_PORT -Djava.rmi.server.hostname=localhost"
+
+PROXY_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9999,server=y,suspend=n $PROXY_JMX_PARAMS $PROXY_PARAMS"
+XROAD_SIGNER_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9998,server=y,suspend=n $SIGNER_JMX_PARAMS $XROAD_SIGNER_PARAMS"
 XROAD_PROXY_UI_API_PARAMS=" -Xdebug -agentlib:jdwp=transport=dt_socket,address=*:9997,server=y,suspend=n $XROAD_PROXY_UI_API_PARAMS"
