--- a/src/common/common-rpc/build.gradle
+++ b/src/common/common-rpc/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     api(libs.grpc.nettyShaded)
     api(libs.protobuf.javaUtil)
     api(libs.jakarta.annotationApi)
+    api(libs.opentelemetry.instrumentation.grpc)
 }
 
 protobuf {
