--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -280,7 +280,8 @@ edc-micrometer-core = { module = "org.eclipse.edc:micrometer-core", version.ref 
 edc-micrometer-jersey = { module = "org.eclipse.edc:jersey-micrometer", version.ref = "edc" }
 edc-micrometer-jetty = { module = "org.eclipse.edc:jetty-micrometer", version.ref = "edc" }
 
-opentelemetry-instrumentation-annotations = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations", version = "1.32.0" } # TODO older version to align with  edc
+opentelemetry-instrumentation-annotations = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations", version = "2.6.0" } # TODO older version to align with  edc
+opentelemetry-instrumentation-grpc = { module = "io.opentelemetry.instrumentation:opentelemetry-grpc-1.6", version = "2.6.0-alpha" } # TODO older version to align with  edc
 
 [bundles]
 metrics = ["metrics-core", "metrics-jmx"]
