--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -149,6 +149,7 @@ restAssured = { module = "io.rest-assured:rest-assured", version = "5.5.0" }
 cliche = { module = "com.googlecode.clichemaven:cliche", version = "110413" }
 acme4j = { module = "org.shredzone.acme4j:acme4j-client", version = "3.3.1" }
 jsonUnit-assertj = { module = "net.javacrumbs.json-unit:json-unit-assertj", version = "3.4.1" }
+opentelemetry-instrumentation-annotations = { module = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations", version = "2.6.0" }
 
 [bundles]
 metrics = ["metrics-core", "metrics-jmx"]
