--- a/Docker/xrd-dev-stack/compose.yaml
+++ b/Docker/xrd-dev-stack/compose.yaml
@@ -13,6 +13,9 @@ services:
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
   ss0:
     image: ${SS_IMG}
+    environment:
+      - PROXY_JMX_PORT=4299
+      - SIGNER_JMX_PORT=4298
     deploy:
       resources:
         reservations:
@@ -25,6 +28,9 @@ services:
       test: [ "CMD", "curl", "-f", "-k", "https://localhost:4000" ]
   ss1:
     image: ${SS_IMG}
+    environment:
+      - PROXY_JMX_PORT=4399
+      - SIGNER_JMX_PORT=4398
     deploy:
       resources:
         reservations:
@@ -61,7 +67,7 @@ services:
       interval: 5s
       retries: 40
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:8080/example-adapter/Endpoint?wsdl" ]
-    entrypoint: ["java", "-Xms64m", "-Xmx256m", "-jar", "/example-adapter.war"]
+    entrypoint: [ "java", "-Xms64m", "-Xmx256m", "-jar", "/example-adapter.war" ]
   isrest:
     image: wiremock/wiremock:latest
     deploy:
@@ -77,7 +83,9 @@ services:
     volumes:
       - ./wiremock_mappings:/home/wiremock/mappings
   hurl:
-    image: ghcr.io/orange-opensource/hurl:latest
+    build:
+        context: .
+        dockerfile: ./hurl/Dockerfile
     deploy:
       resources:
         reservations:
@@ -85,7 +93,6 @@ services:
         limits:
           memory: 128M
     volumes:
-      - ./hurl-src:/hurl-src
       - ca-volume:/hurl-files/ca
     depends_on:
       cs:
