fix: Unregister member from security server
Refs: XRDDEV-2652

--- a/src/central-server/admin-service/application/src/main/resources/permissions.yml
+++ b/src/central-server/admin-service/application/src/main/resources/permissions.yml
@@ -13,6 +13,7 @@
 - EDIT_MEMBER_NAME: [ XROAD_REGISTRATION_OFFICER ]
 - ADD_MEMBER_SUBSYSTEM: [ XROAD_REGISTRATION_OFFICER ]
 - REMOVE_MEMBER_SUBSYSTEM: [ XROAD_REGISTRATION_OFFICER ]
+- UNREGISTER_MEMBER: [ XROAD_REGISTRATION_OFFICER ]
 - UNREGISTER_SUBSYSTEM: [ XROAD_REGISTRATION_OFFICER ]
 - ADD_CLIENT_REGISTRATION_REQUEST: [ XROAD_REGISTRATION_OFFICER, XROAD_MANAGEMENT_SERVICE ]
 - ADD_CLIENT_DELETION_REQUEST: [ XROAD_REGISTRATION_OFFICER, XROAD_MANAGEMENT_SERVICE ]
