--- a/ansible/roles/xroad-base/tasks/rhel.yml
+++ b/ansible/roles/xroad-base/tasks/rhel.yml
@@ -12,7 +12,14 @@
 - name: Install EPEL repository (RHEL)
   yum:
     name: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ansible_distribution_major_version}}.noarch.rpm"
-  when: not epel.stat.exists
+  when: not epel.stat.exists and ansible_distribution_major_version != "7"
+
+- name: Install EPEL repository (RHEL 7 only)
+  yum_repository:
+    name: epel
+    description: EPEL repository
+    baseurl: "https://dl.fedoraproject.org/pub/archive/epel/7/$basearch"
+  when: not epel.stat.exists and ansible_distribution_major_version == "7"
 
 - name: Setup the Adoptium repo (RHEL 7 only)
   yum_repository:
