--- a/ansible/roles/xroad-base/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-base/tasks/ubuntu.yml
@@ -21,10 +21,18 @@
     group: root
   when: (disable_automatic_upgrades is defined) and (disable_automatic_upgrades)
 
-- name: Install X-Road apt repo key
-  apt_key:
+- name: Download X-Road apt repo key
+  get_url:
     url: "{{ubuntu_apt_key}}"
-    state: present
+    dest: /tmp/xroad.gpg
+  when: package_source == "remote" and (ansible_distribution == "Ubuntu")
+
+- name: Install X-Road apt repo key
+  ansible:
+    builtin:
+      apt_key:
+        file: /tmp/xroad.gpg
+        state: present
   when: package_source == "remote" and (ansible_distribution == "Ubuntu")
 
 - name: Remove old repo config
