--- a/ansible/roles/xroad-base/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-base/tasks/ubuntu.yml
@@ -22,7 +22,7 @@
   when: (disable_automatic_upgrades is defined) and (disable_automatic_upgrades)
 
 - name: Add X-Road apt repo key
-  command: "wget -qO- {{ ubuntu_apt_key }} | gpg --dearmor -o /etc/apt/trusted.gpg.d/xroad.gpg"
+  shell: "curl -sL {{ ubuntu_apt_key }} | sudo gpg --dearmor --batch --yes -o /etc/apt/trusted.gpg.d/xroad.gpg"
   when: package_source == "remote" and (ansible_distribution == "Ubuntu")
 
 - name: Remove old repo config
