--- a/ansible/vars_files/remote_repo.yml
+++ b/ansible/vars_files/remote_repo.yml
@@ -7,6 +7,9 @@ xroad_repo_key:  "https://artifactory.niis.org/api/gpg/key/public"
 ubuntu_apt_key:  "{{xroad_repo_key}}"
 ubuntu_repo_url: "{{xroad_repo_baseurl}}/xroad-release-deb"
 ubuntu_apt_repo: "deb {{ubuntu_repo_url}} {{ansible_distribution_release}}-current main"
+ubuntu_apt_key_file: "/usr/share/keyrings/xroad.gpg"
+ubuntu_apt_option: "arch=amd64 signed-by={{ubuntu_apt_key_file}}"
+ubuntu_apt_repo_with_option: "deb [{{ubuntu_apt_option}}] {{ubuntu_repo_url}} {{ansible_distribution_release}}-current main"
 
 rhel_repo_baseurl: "{{xroad_repo_baseurl}}/xroad-release-rpm/rhel/{{ansible_distribution_major_version}}/current"
 rhel_repo_gpgcheck: "yes"
