fix: ansible script fix
Refs: XRDDEV-2670

--- a/ansible/roles/xroad-base/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-base/tasks/ubuntu.yml
@@ -22,7 +22,9 @@
   when: (disable_automatic_upgrades is defined) and (disable_automatic_upgrades)
 
 - name: Add X-Road apt repo key
-  shell: "curl -sL {{ ubuntu_apt_key }} | sudo gpg --dearmor --batch --yes -o {{ ubuntu_apt_key_file }}"
+  get_url:
+    url: "{{ ubuntu_apt_key }}"
+    dest: "{{ ubuntu_apt_key_file }}"
   when: package_source == "remote" and (ansible_distribution == "Ubuntu")
 
 - name: Remove old repo config
