feat: Ensure to include all message parts in signaures + use DSS for new & legacy code for legacy containers validation

--- a/src/addons/messagelog/messagelog-addon/build.gradle
+++ b/src/addons/messagelog/messagelog-addon/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     testImplementation project(':addons:messagelog:messagelog-archiver')
     testImplementation libs.hsqldb
     testImplementation libs.bouncyCastle.bcpg
+    testImplementation libs.dss.asic.xades
 }
 
 jar {
