fix: add Apache CXF Runtime HTTP Transport library for fixing WSDL validation
Refs: XRDDEV-2688

--- a/src/addons/wsdlvalidator/build.gradle
+++ b/src/addons/wsdlvalidator/build.gradle
@@ -15,6 +15,7 @@ jar {
 
 dependencies {
     implementation libs.apache.cxfToolsValidator
+    implementation libs.apache.cxfRtTransportsHttp
     implementation libs.javax.annotationApi
 }
 
