--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ protoc = "3.25.3"
 grpc = "1.64.0"
 swaggerParser = "2.1.22"
 logback = "1.4.14"
+apacheCxf = "4.0.4"
 
 [libraries]
 metrics-core = { module = "io.dropwizard.metrics:metrics-core", version.ref = "metrics" }
@@ -96,7 +97,8 @@ apache-commonsLang3 = { module = "org.apache.commons:commons-lang3", version = "
 apache-commonsText = { module = "org.apache.commons:commons-text", version = "1.12.0" }
 apache-commonsConfiguration2 = { module = "org.apache.commons:commons-configuration2", version = "2.11.0" }
 apache-httpmime = { module = "org.apache.httpcomponents:httpmime", version = "4.5.14" }
-apache-cxfToolsValidator = { module = "org.apache.cxf:cxf-tools-validator", version = "4.0.4" }
+apache-cxfToolsValidator = { module = "org.apache.cxf:cxf-tools-validator", version.ref = "apacheCxf" }
+apache-cxfRtTransportsHttp = { module = "org.apache.cxf:cxf-rt-transports-http", version.ref = "apacheCxf" }
 apache-tikaCore = { module = "org.apache.tika:tika-core", version = "2.9.2" }
 apache-xmlsec = { module = "org.apache.santuario:xmlsec", version = "4.0.2" }
 apache-httpclient = { module = "org.apache.httpcomponents:httpclient", version = "4.5.14" }
