chore: fix build/runtime issues after library version increase

--- a/src/central-server/admin-service/infra-jpa/build.gradle
+++ b/src/central-server/admin-service/infra-jpa/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation project(':common:common-domain')
 
     api('org.springframework.boot:spring-boot-starter-data-jpa')
+    api(libs.hibernate.core)
     implementation("org.hibernate.validator:hibernate-validator")
 }
 
