chore: fix build/runtime issues after library version increase

--- a/src/gradle/libs.versions.toml
+++ b/src/gradle/libs.versions.toml
@@ -21,8 +21,9 @@ testAutomationFramework = "0.2.18"
 protoc = "3.25.4"
 grpc = "1.66.0"
 swaggerParser = "2.1.22"
+#can go newer on spring boot v3.3.3
 logback = "1.5.6"
-logbackAccess = "2.0.3"
+logbackAccess = "2.0.2"
 
 [libraries]
 metrics-core = { module = "io.dropwizard.metrics:metrics-core", version.ref = "metrics" }
