chore: move src/proxy to src/proxy/application
Refs: XRDDEV-2673

--- a/src/addons/messagelog/messagelog-addon/asic/build.gradle
+++ b/src/addons/messagelog/messagelog-addon/asic/build.gradle
@@ -1,7 +1,7 @@
 
 
 dependencies {
-    implementation(project(':proxy'))
+    implementation(project(':proxy:application'))
     implementation(project(':common:common-jetty'))
     implementation(project(':common:common-globalconf'))
     implementation(project(':serverconf'))
