--- a/src/addons/messagelog/messagelog-addon/build.gradle
+++ b/src/addons/messagelog/messagelog-addon/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     testImplementation project(':common:common-verifier')
     testImplementation project(':serverconf')
     testImplementation project(':asic-util')
-    testImplementation project(':proxy')
+    testImplementation project(':proxy:application')
 
     testImplementation project(':common:common-test')
     testImplementation project(':addons:messagelog:messagelog-archiver')
