--- a/src/addons/metaservice/build.gradle
+++ b/src/addons/metaservice/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation project(':proxy')
+    implementation project(':proxy:application')
     implementation project(':common:common-jetty')
     implementation project(':common:common-keyconf')
     implementation project(':serverconf')
@@ -8,7 +8,7 @@ dependencies {
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"
 
     testImplementation project(':common:common-test')
-    testImplementation project(path: ":proxy", configuration: 'testArtifacts')
+    testImplementation project(path: ":proxy:application", configuration: 'testArtifacts')
 
     testImplementation(libs.wiremock.standalone)
 
