--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -31,6 +31,7 @@ include 'common:common-scheduler'
 
 // Main projects
 include "proxy"
+include "proxy:application"
 include "signer"
 include "configuration-proxy"
 include "configuration-client"
